edited css to correct red block overflow

--- a/PRACTICA/flexionar-nuestros-bloques/css/styles.css
+++ b/PRACTICA/flexionar-nuestros-bloques/css/styles.css
@@ -3,6 +3,7 @@
     background-color: silver;
     margin: 0px auto;
     padding: 10px;
+    overflow: hidden;
 }
 .top-nav {
     height: 150px;
@@ -16,7 +17,7 @@
     margin: 10px;
 }
 .main {
-    height: 400px;
+    height: 340px;
     width: 700px;
     background-color: red;
     margin: 10px;
@@ -36,7 +37,8 @@
     background-color: purple;
     position: absolute;
     bottom: 0;
-    margin: 5px;
+    margin-bottom: 20px;
+    margin-left: 5px;
 
 }
 .row {
